Fixed centered text alignment

--- a/src/scss/utils/containers.scss
+++ b/src/scss/utils/containers.scss
@@ -113,6 +113,7 @@
   display: flex;
   justify-content: center;
   gap: 1rem;
+  text-align: center;
 }
 
 @media only screen and (min-width: 1200px) {
